--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node-red-contrib-firstmakers",
-	"version": "0.0.1",
+	"version": "0.0.3",
 	"description": "",
 	"scripts": {
 	"test": "echo \"Error: no test specified\" && exit 1"
@@ -8,6 +8,11 @@
 	"author": "Ernesto Laval",
 	"license": "ISC",
 	"keywords": [ "node-red" ],
+	"dependencies" : {
+		"q":"*",
+		"arduino-firmata":"*",
+		"node-hid":"*"
+	},
 	"node-red"     : {
 	    "nodes": {
 	        "firstmakers": "firstmakers.js"
