--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node-red-contrib-firstmakers",
-	"version": "0.0.4",
+	"version": "0.0.5",
 	"description": "",
 	"scripts": {
 	"test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +10,8 @@
 	"keywords": [ "node-red" ],
 	"dependencies" : {
 		"q":"*",
-		"arduino-firmata":"*",
-		"node-hid":"*"
+		"node-hid":"*",
+		"firmata"
 	},
 	"node-red"     : {
 	    "nodes": {
