--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node-red-contrib-firstmakers",
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"description": "",
 	"scripts": {
 	"test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +11,8 @@
 	"dependencies" : {
 		"q":"*",
 		"node-hid":"*",
-		"firmata":"*"
+		"firmata":"*",
+		"serialport":"latest"
 	},
 	"node-red"     : {
 	    "nodes": {
